Fixed a issue with hamburguer menu - z-index

--- a/src/sass/_hamburguerMenu.scss
+++ b/src/sass/_hamburguerMenu.scss
@@ -1,28 +1,34 @@
-.hamburguerMenu {
+.hamburguerBackground {
   display: none;
-  position: absolute;
-  width: 91%;
-  top: 6rem;
+  position: sticky;
+  top: 4rem;
   left: 0;
   right: 0;
-  margin: auto;
-  height: calc(100vh - 6rem);
+  height: calc(100vh - 4rem);
   background-color: #fff;
   overflow: auto;
+  z-index: 99;
+  width: 100%;
 
-  .menuContainer {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-    justify-content: space-between;
-    padding-bottom: 3rem;
-  }
+  .hamburguerMenu {
+    padding-top: 1rem;
+    width: 90%;
+    margin: auto;
 
-  input {
-    padding: 1rem;
-    border: 1px solid #cacaca;
-    border-radius: 4px;
-    width: 100%;
+    .menuContainer {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      justify-content: space-between;
+      padding-bottom: 3rem;
+    }
+
+    input {
+      padding: 1rem;
+      border: 1px solid #cacaca;
+      border-radius: 4px;
+      width: 100%;
+    }
   }
 }
 
