--- a/src/sass/generalStyles.scss
+++ b/src/sass/generalStyles.scss
@@ -10,7 +10,6 @@
 @import "./footer";
 
 body {
-  position: relative;
   margin: auto;
   font-family: "Source Sans Pro", sans-serif;
 }
